--- a/public/src/index.html
+++ b/public/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
     <link rel="shortcut icon" href="./favicon.ico" />
-    <title>豆腐记账</title>
+    <title>爱记账</title>
 </head>
 <body>
 	<div id="app">
