--- a/public/src/index.html
+++ b/public/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
     <link rel="shortcut icon" href="./favicon.ico" />
-    <title>爱记账</title>
+    <title>niamoi | 记账</title>
 </head>
 <body>
 	<div id="app">
 	</div>
 	<script src="./js/libs/sweetalert2.min.js"></script>
-	<script src="./js/libs/echarts.min.js"></script>
+	<script src="https://cdn.bootcss.com/echarts/3.5.4/echarts.min.js"></script>
 	<script src="../dist/app.bundle.js"></script>
 </body>
 </html>
