--- a/public/src/index.html
+++ b/public/src/index.html
@@ -7,7 +7,7 @@
     <title>niamoi | 记账</title>
 </head>
 <body>
-	<div id="app">
+	<div id="app" v-cloak>
 	</div>
 	<script src="./js/libs/sweetalert2.min.js"></script>
 	<script src="https://cdn.bootcss.com/echarts/3.5.4/echarts.min.js"></script>
